# McOverlayer

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
apps/cli/: CMakeLists.txt  main.cpp
apps/gui/: ApplyDialog.cpp  ApplyDialog.h  AssignmentCard.cpp  AssignmentCard.h  CMakeLists.txt  ConfigPanel.cpp  ConfigPanel.h  FlowLayout.cpp  FlowLayout.h  MainWindow.cpp  MainWindow.h  OverlayLookupDialog.cpp  OverlayLookupDialog.h  PathConfigWidget.cpp  PathConfigWidget.h  PresetsDialog.cpp  PresetsDialog.h  SeedSearchDialog.cpp  SeedSearchDialog.h  ThumbnailLoader.cpp  ThumbnailLoader.h  main.cpp
apps/region_editor/: CMakeLists.txt  RegionEditorWindow.cpp  RegionEditorWindow.h  TextureCanvas.cpp  TextureCanvas.h  main.cpp
docs/: building.md  cli.md  concepts.md  entity-regions.md  gui.md  region-editor.md
entity_regions/: allay.json  armadillo.json  armorstand.json  axolotl.json  bat.json  bed_foot.json  bed_head.json  bee.json  bell.json  blaze.json  boat.json  bogged.json  breeze.json  camel.json  cat.json  chest.json  chest_boat.json  chest_left.json  chest_right.json  chicken.json  cod.json  cold_chicken.json  cold_cow.json  cold_pig.json  copper_golem.json  cow.json  creaking.json  creeper.json  dolphin.json  donkey.json  drowned.json  end_crystal.json  enderdragon.json  enderman.json  endermite.json  evoker_fangs.json  fox.json  frog.json  ghast.json  goat.json  (+50 more)
libs/core/: CMakeLists.txt
libs/core/include/core/: AnimationUtils.h  EntityLoader.h  EntityMapper.h  FileUtils.h  Hash.h  ImageCache.h  ImageProcessor.h  MappingConfig.h  OverlayMapper.h  PathConfig.h  Types.h
libs/core/src/: AnimationUtils.cpp  EntityLoader.cpp  EntityMapper.cpp  FileUtils.cpp  Hash.cpp  ImageCache.cpp  ImageProcessor.cpp  MappingConfig.cpp  OverlayMapper.cpp  PathConfig.cpp
scripts/: analyze_entity_textures.py  extract_entity_regions.py  requirements.txt
scripts/deprecated/: mc_overlayer.py  mc_overlayer_gui.py  overlay_engine.py  texture_region_editor.py
